--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -4,10 +4,10 @@ block rightBar
   //
      Right Nav Section
   li.active
-    a.medium.radius.button(href='#') Add a Test
-  li.divider
+    a.medium.radius.button(href='#' style="top:5.5px") Add a Test
+  li.divider(style='padding-left:5px;padding-right:5px;background:#333333;border-right:0px')
   li.active
-    a.medium.radius.button(href='#', data-reveal-id='firstModal') View All Tests
+    a.medium.radius.button(href='#', data-reveal-id='firstModal' style='top:5.5px;') View All Tests
   #firstModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
     .row
       .large-12.columns
