--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -1,167 +1,186 @@
-extends layout
+doctype html
+html(ng-app='ngAddApp', lang='en')
+  head.no-js
+    title= "eTest"
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet', href='stylesheets/foundation.css')
+    link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
+    link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
+    link(rel='icon', type='image/png', href='/img/favicon.png')
 
-block pageTitle
-  .jumbotron
-    h1= eTest
-block pageContent
-  .row
-    .large-12.columns
-      h1 eTest Teacher's Portal
-      br
-  .row
-    .large-12.columns
-      .panel
-        .row
-          .large-4.medium-4.push-8.columns
-            img(src='/img/favicon.png')
-            br
-            br
-          .large-8.medium-8.pull-4.columns
-            h2 eTest is an innovative new platform that allows teachers and students to easily take and analyze tests. eTest is a revolutionary and novel education platform for students all over America and in the international community.
-            h3 We’re stoked you want to try eTest!
-            p To get going, first register. Then check out this awesome stuff.
-            p Check us out on
-        br
-        .row
-          .large-6.medium-6.columns
-            center
-              p
-                a(href='#', data-reveal-id='teacherModal') Teachers...
+  body(ng-controller='MainCtrl')
+    block pageTitle
+      .jumbotron
+        h1= eTest
+    block pageContent
+      .row
+        .large-12.columns
+          h1 eTest Teacher's Portal
+          br
+      .row
+        .large-12.columns
+          .panel
+            .row
+              .large-4.medium-4.push-8.columns
+                img(src='/img/favicon.png')
                 br
-                | Sign in to your account to create tests, manage tests, and observe students' preformance.
-            center
-              a.medium.button(href='#', data-reveal-id='teacherModal') Sign In
-            #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
-              h3
-                center Sign In
-              br
-              .row
-                .large-6.columns
-                  .callout.panel
-                    h4
-                      center Register
-                    br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Email:
-                          .small-9.columns
-                            input(type='text', placeholder='Email...')
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Username:
-                          .small-9.columns
-                            input(type='text', placeholder='Username...')
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Password:
-                          .small-9.columns
-                            input(type='text', placeholder='Password...')
-                    br
-                    center
-                      a.medium.round.success.button(href='#') Submit
-                      br
-                .large-6.columns
-                  .callout.panel
-                    br
-                    br
-                    h4
-                      center Already Registered?
-                    br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Username/Email:
-                          .small-9.columns
-                            input(type='text', placeholder='User/Email...')
-                    br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Password:
-                          .small-9.columns
-                            input(type='text', placeholder='Password...')
-                    br
-                    center
-                      a.medium.round.success.button(href='#') Login
-                      br
-              a.close-reveal-modal &times;
-          .large-6.medium-6.columns
-            center
-              p
-                a(href='#', data-reveal-id='studentModal') Students...
                 br
-                | Login to take current tests, check previous test scores, and
-            center
-              a.medium.button(href='#', data-reveal-id='studentModal') Sign In
-            #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
-              h3
-                center Sign In
-              br
-              .row
-                .large-6.columns
-                  .callout.panel
-                    h4
-                      center Register
+              .large-8.medium-8.pull-4.columns
+                h2 eTest is an innovative new platform that allows teachers and students to easily take and analyze tests. eTest is a revolutionary and novel education platform for students all over America and in the international community.
+                h3 We’re stoked you want to try eTest!
+                p To get going, first register. Then check out this awesome stuff.
+                p Check us out on
+            br
+            .row
+              .large-6.medium-6.columns
+                center
+                  p
+                    a(href='#', data-reveal-id='teacherModal') Teachers...
                     br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Email:
-                          .small-9.columns
-                            input(type='text', placeholder='Email...')
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Username:
-                          .small-9.columns
-                            input(type='text', placeholder='Username...')
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Password:
-                          .small-9.columns
-                            input(type='text', placeholder='Password...')
+                    | Sign in to your account to create tests, manage tests, and observe students' preformance.
+                center
+                  a.medium.button(href='#', data-reveal-id='teacherModal') Sign In
+                #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                  h3
+                    center Sign In
+                  br
+                  .row
+                    .large-6.columns
+                      .callout.panel
+                        h4
+                          center Register
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Email:
+                              .small-9.columns
+                                input(type='text', placeholder='Email...')
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Username:
+                              .small-9.columns
+                                input(type='text', placeholder='Username...')
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Password:
+                              .small-9.columns
+                                input(type='text', placeholder='Password...')
+                        br
+                        center
+                          a.medium.round.success.button(href='#') Submit
+                          br
+                    .large-6.columns
+                      .callout.panel
+                        br
+                        br
+                        h4
+                          center Already Registered?
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Username/Email:
+                              .small-9.columns
+                                input(type='text', placeholder='User/Email...')
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Password:
+                              .small-9.columns
+                                input(type='text', placeholder='Password...')
+                        br
+                        center
+                          a.medium.round.success.button(href='#') Login
+                          br
+                  a.close-reveal-modal &times;
+              .large-6.medium-6.columns
+                center
+                  p
+                    a(href='#', data-reveal-id='studentModal') Students...
                     br
-                    center
-                      a.medium.round.success.button(href='#') Submit
-                      br
-                .large-6.columns
-                  .callout.panel
-                    br
-                    br
-                    h4
-                      center Already Registered?
-                    br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Username/Email:
-                          .small-9.columns
-                            input(type='text', placeholder='User/Email...')
-                    br
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-3.columns
-                            span.prefix Password:
-                          .small-9.columns
-                            input(type='text', placeholder='Password...')
-                    br
-                    center
-                      a.medium.round.success.button(href='#') Login
-                      br
-              a.close-reveal-modal &times;
-        .row
-          .large-12.columns
+                    | Login to take current tests, check previous test scores, and
+                center
+                  a.medium.button(href='#', data-reveal-id='studentModal') Sign In
+                #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                  h3
+                    center Sign In
+                  br
+                  .row
+                    .large-6.columns
+                      .callout.panel
+                        h4
+                          center Register
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Email:
+                              .small-9.columns
+                                input(type='text', placeholder='Email...')
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Username:
+                              .small-9.columns
+                                input(type='text', placeholder='Username...')
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Password:
+                              .small-9.columns
+                                input(type='text', placeholder='Password...')
+                        br
+                        center
+                          a.medium.round.success.button(href='#') Submit
+                          br
+                    .large-6.columns
+                      .callout.panel
+                        br
+                        br
+                        h4
+                          center Already Registered?
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Username/Email:
+                              .small-9.columns
+                                input(type='text', placeholder='User/Email...')
+                        br
+                        .row
+                          .large-12.columns
+                            .row.collapse
+                              .small-3.columns
+                                span.prefix Password:
+                              .small-9.columns
+                                input(type='text', placeholder='Password...')
+                        br
+                        center
+                          a.medium.round.success.button(href='#') Login
+                          br
+                  a.close-reveal-modal &times;
+            .row
+              .large-12.columns
+    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+
+    script(src='questions.js', deferred='')
+    script(src='button.js', deferred='')
+    scritp(src='teacherTestSubmission.js')
+    script($(document).foundation();)
