--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -1,177 +1,158 @@
-doctype html
-html(ng-app='ngAddApp', lang='en')
-  head.no-js
-    title= "eTest"
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet', href='stylesheets/foundation.css')
-    link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
-    link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
-    link(rel='icon', type='image/png', href='/img/favicon.png')
-
-  body(ng-controller='MainCtrl')
-    block pageTitle
-      .jumbotron
-        h1= eTest
-    block pageContent
-      br
-      br
-      .row
-        .large-12.columns
-          h1 eTest Teacher's Portal
-          br
-      .row
-        .large-12.columns
-          .panel
-            .row
-              .large-6.medium-6.columns
-                center
-                  p
-                    a(href='#', data-reveal-id='teacherModal') Teachers...
-                    br
-                    | Sign in to your account to create and manage tests.
-                center
-                  a.medium.button(href='#', data-reveal-id='teacherModal') Sign In
-                #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
-                  h3
-                    center Sign In
+extends backbone
+block bodyContent
+  block pageTitle
+    .jumbotron
+      h1= eTest
+  block pageContent
+    br
+    br
+    .row
+      .large-12.columns
+        h1 eTest Teacher's Portal
+        br
+    .row
+      .large-12.columns
+        .panel
+          .row
+            .large-6.medium-6.columns
+              center
+                p
+                  a(href='#', data-reveal-id='teacherModal') Teachers...
                   br
-                  .row
-                    .large-6.columns
-                      .callout.panel
-                        h4
-                          center Register
+                  | Sign in to your account to create and manage tests.
+              center
+                a.medium.button(href='#', data-reveal-id='teacherModal') Sign In
+              #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                h3
+                  center Sign In
+                br
+                .row
+                  .large-6.columns
+                    .callout.panel
+                      h4
+                        center Register
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Email:
+                            .small-9.columns
+                              input(type='text', placeholder='Email...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username:
+                            .small-9.columns
+                              input(type='text', placeholder='Username...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Submit
                         br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Email:
-                              .small-9.columns
-                                input(type='text', placeholder='Email...')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Username:
-                              .small-9.columns
-                                input(type='text', placeholder='Username...')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Password:
-                              .small-9.columns
-                                input(type='text', placeholder='Password...')
+                  .large-6.columns
+                    .callout.panel
+                      br
+                      br
+                      h4
+                        center Already Registered?
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username/Email:
+                            .small-9.columns
+                              input(type='text', placeholder='User/Email...')
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Login
                         br
-                        center
-                          a.medium.round.success.button(href='#') Submit
-                          br
-                    .large-6.columns
-                      .callout.panel
-                        br
-                        br
-                        h4
-                          center Already Registered?
-                        br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Username/Email:
-                              .small-9.columns
-                                input(type='text', placeholder='User/Email...')
-                        br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Password:
-                              .small-9.columns
-                                input(type='text', placeholder='Password...')
-                        br
-                        center
-                          a.medium.round.success.button(href='#') Login
-                          br
-                  a.close-reveal-modal &times;
-              .large-6.medium-6.columns
-                center
-                  p
-                    a(href='#', data-reveal-id='studentModal') Students...
-                    br
-                    | Login to take current tests and check previous test scores.
-                center
-                  a.medium.button(href='#', data-reveal-id='studentModal') Sign In
-                #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
-                  h3
-                    center Sign In
+                a.close-reveal-modal &times;
+            .large-6.medium-6.columns
+              center
+                p
+                  a(href='#', data-reveal-id='studentModal') Students...
                   br
-                  .row
-                    .large-6.columns
-                      .callout.panel
-                        h4
-                          center Register
+                  | Login to take current tests and check previous test scores.
+              center
+                a.medium.button(href='#', data-reveal-id='studentModal') Sign In
+              #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                h3
+                  center Sign In
+                br
+                .row
+                  .large-6.columns
+                    .callout.panel
+                      h4
+                        center Register
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Email:
+                            .small-9.columns
+                              input(type='text', placeholder='Email...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username:
+                            .small-9.columns
+                              input(type='text', placeholder='Username...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Submit
                         br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Email:
-                              .small-9.columns
-                                input(type='text', placeholder='Email...')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Username:
-                              .small-9.columns
-                                input(type='text', placeholder='Username...')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Password:
-                              .small-9.columns
-                                input(type='text', placeholder='Password...')
+                  .large-6.columns
+                    .callout.panel
+                      br
+                      br
+                      h4
+                        center Already Registered?
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username/Email:
+                            .small-9.columns
+                              input(type='text', placeholder='User/Email...')
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Login
                         br
-                        center
-                          a.medium.round.success.button(href='#') Submit
-                          br
-                    .large-6.columns
-                      .callout.panel
-                        br
-                        br
-                        h4
-                          center Already Registered?
-                        br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Username/Email:
-                              .small-9.columns
-                                input(type='text', placeholder='User/Email...')
-                        br
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-3.columns
-                                span.prefix Password:
-                              .small-9.columns
-                                input(type='text', placeholder='Password...')
-                        br
-                        center
-                          a.medium.round.success.button(href='#') Login
-                          br
-                  a.close-reveal-modal &times;
-            .row
-              .large-12.columns
-    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
-
-    script(src='questions.js', deferred='')
-    script(src='button.js', deferred='')
-    scritp(src='teacherTestSubmission.js')
-    script($(document).foundation();)
+                a.close-reveal-modal &times;
+          .row
+            .large-12.columns
