--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -4,7 +4,7 @@ block rightBar
   //
      Right Nav Section
   li.active
-    a.medium.radius.button(href='#' style='top:5.5px') Add a Test
+    a.medium.radius.button(href='#' style="top:5.5px") Add a Test
   li.divider(style='padding-left:5px;padding-right:5px;background:#333333;border-right:0px')
   li.active
     a.medium.radius.button(href='#', data-reveal-id='firstModal' style='top:5.5px;') View All Tests
@@ -26,15 +26,19 @@ block rightBar
               img(data-caption='File 3', src='img/folderpic.jpg')
     a.close-reveal-modal &times;
 
+br
+br
+br
+
 block pageContent
   .row
     .large-12.columns
       h1(style='padding-top:40px') Dashboard
-    .sm.spacer
+    br
   .row
     .large-12.columns
       .panel
-        form(action='/newtest' method='post')#newtestCreation
+        form(action="/newtest" method="post")#newtestCreation
           div(ng-repeat='question in questions')
             .form-group
               .row
@@ -43,7 +47,7 @@ block pageContent
                     .large-3.columns
                       center
                         h4 Question Type
-                      select(form='newtestCreation' name='questionChoice').question-type
+                      select(form="newtestCreation" name="questionChoice").question-type
                         option(value='mtpl') Multiple Choice
                         option(value='shrt') Short Answer
                         option(value='mtch') Matching
@@ -62,10 +66,10 @@ block pageContent
                         .large-12.columns
                           .row.collapse
                             .small-2.columns
-                              .sm.spacer
+                              br
                               center
                                 h6 # Answer Choices
-                              select(form='newtestCreation' name='amtAnswers')
+                              select(form="newtestCreation" name="amtAnswers")
                                 option(value='two') 2
                                 option(value='three') 3
                                 option(value='four') 4
@@ -75,7 +79,7 @@ block pageContent
                                   select
                                     div(ng-repeat='answer in answers')
                                       .form-group
-                                        option(name='correctAnswer' value='a') A
+                                        option(name="correctAnswer" value='a') A
                             .small-9.columns
                               .row
                                 .large-12.columns
@@ -83,21 +87,21 @@ block pageContent
                                     .small-2.columns
                                       span.prefix A:
                                     .small-10.columns
-                                      input(type='text', name='answer', placeholder='Apple')
+                                      input(type='text', name="answer", placeholder='Apple')
                               .row
                                 .large-12.columns
                                   .row.collapse
                                     .small-2.columns
                                       span.prefix B:
                                     .small-10.columns
-                                      input(type='text',name='answer', placeholder='Banana')
+                                      input(type='text',name="answer", placeholder='Banana')
                               .row
                                 .large-12.columns
                                   .row.collapse
                                     .small-2.columns
                                       span.prefix C:
                                     .small-10.columns
-                                      input(type='text',name='answer',placeholder='Carrot')
+                                      input(type='text',name="answer",placeholder='Carrot')
                               .row
                                 .large-12.columns
                                   .row.collapse
@@ -110,22 +114,23 @@ block pageContent
                         h4(stlye='float:right;', align='right')
                           font(color='F21111') &times;
                       .row
-                        .spacer
+                        br
+                        br
                         .large-12.columns
                           center
-                            input#checkbox1(name='randomnized' type='checkbox')
+                            input#checkbox1(name="randomnized" type='checkbox')
                             label(for='random') Randomize?
                         .large-12.columns
                           .row.collapse
                             .small-5.columns
                               span.prefix Worth
                             .small-4.columns
-                              input(name='points' type='text', placeholder='')
+                              input(name="points" type='text', placeholder='')
                             .small-3.columns
                               span.postfix Pts.
+            br
           center
             a.medium.radius.button(ng-click='newQuestion()') Add Question
   .row
     .large-12.columns
-      input(name ='submit' value='Submit' type='submit')
-  .spacer
+      input(name ="submit" value="Submit" type="submit" style='width:100%')
