--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -1,43 +1,64 @@
-extends backbone
+﻿//
+  Layout.jade defines the layout of the website. It contains the navbar and
+  extension views will populate pageTitle and pageContent blocks
 
-block bodyContent
-  block navBar
-    .fixed
-      nav.top-bar(data-topbar='data-topbar')
-        ul.title-area
-          li.name
-            h1
-              a(href='#') eTest
-          //
-             Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone
-          li.toggle-topbar.menu-icon
-            a(href='#')
-              span Menu
-        section.top-bar-section
-          ul.right
-            block rightBar
-            li.has-dropdown
-              a(href='#') Login/Logout
-              ul.dropdown
-                li
-                  a(href='#') First link in dropdown
-          //
-             Left Nav Section
-          ul.left
-            li.active
-              a(href='/') Home
-            li
-              a(href='/newtest') Portal
-            li.divider
-            li.has-form
-              .row.collapse
-                .large-8.columns
-                  input(type='text', placeholder='Search...' style='height:2.098rem')
-                .large-4.columns
-                  a.alert.button.expand(href='#') Search
-    br
-    br
+doctype html
+html(ng-app='ngAddApp', lang='en')
+  head.no-js
+    title= "eTest"
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet', href='stylesheets/foundation.css')
+    link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
+    link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
+    link(rel='icon', type='image/png', href='/img/favicon.png')
+  body(ng-controller='MainCtrl')
+    block navBar
+      .fixed
+        nav.top-bar(data-topbar='data-topbar')
+          ul.title-area
+            li.name
+              h1
+                a(href='#') eTest
+            //
+               Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone
+            li.toggle-topbar.menu-icon
+              a(href='#')
+                span Menu
+          section.top-bar-section
+            ul.right
+              block rightBar
+              li.has-dropdown
+                a(href='#') Login/Logout
+                ul.dropdown
+                  li
+                    a(href='#') First link in dropdown
+            //
+               Left Nav Section
+            ul.left
+              li.active
+                a(href='/') Home
+              li
+                a(href='/newtest') Portal
+              li.divider
+              li.has-form
+                .row.collapse
+                  .large-8.columns
+                    input(type='text', placeholder='Search...' style='height:2.098rem')
+                  .large-4.columns
+                    a.alert.button.expand(href='#') Search
+      br
+      br
 
-  //These are populated by extension views
-  block pageTitle
-  block pageContent
+    //These are populated by extension views
+    block pageTitle
+    block pageContent
+    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+
+    script(src='questions.js', deferred='')
+    script(src='button.js', deferred='')
+    scritp(src='teacherTestSubmission.js')
+    script($(document).foundation();)
