--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -4,7 +4,8 @@ html(ng-app='ngAddApp', lang='en')
     title= "eTest"
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet', href='stylesheets/foundation.css')
+    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
+    link(rel='stylesheet', href='stylesheets/ken.css')
     link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
     link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
     link(rel='icon', type='image/png', href='/img/favicon.png')
